<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocalActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="375dp"
        android:layout_height="375dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/forwardButton"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="244dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/direction_caret_up"
            android:contentDescription="@string/forwardButton" />

        <ImageButton
            android:id="@+id/leftButton"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="244dp"
            android:layout_marginBottom="130dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/direction_caret_left"
            android:contentDescription="@string/leftButton" />

        <ImageButton
            android:id="@+id/rightButton"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_marginStart="244dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="130dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/direction_caret_right"
            android:contentDescription="@string/rightButton" />

        <ImageButton
            android:id="@+id/backwardButton"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="244dp"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/direction_caret_down"
            android:contentDescription="@string/backwardButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/toRemoteButton"
        android:layout_width="109dp"
        android:layout_height="57dp"
        android:layout_marginStart="270dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="645dp"
        android:text="@string/remoteControl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>